bug 20841 - use double border and resize fields/buttons to handle labels with descenders in text (r=DesignerSteve)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@18445 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/content/bindings/device/deviceInfo.css
+++ b/feathers/purplerain/chrome/content/bindings/device/deviceInfo.css
@@ -93,7 +93,7 @@ Imported by bindings.css or directly into feathers.
 .eject-button {
   margin:0px;
   padding:0px;
-  width:28px;
+  width:24px;
 }
 .eject-button .button-box,
 .more-info-button .button-box {
@@ -108,8 +108,8 @@ Imported by bindings.css or directly into feathers.
   border: none !important;
   margin: 0px !important;
   padding: 0px !important;
-  min-height: 22px !important;
-  max-height: 22px !important;
+  min-height: 20px !important;
+  max-height: 20px !important;
   background-color: transparent !important;
 }
 .eject-info-buttons > groupbox > .groupbox-body {
