--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -1016,7 +1016,7 @@ sb-device-managetabs {
 }
 
 .eject-info-buttons {
-  margin: 0px 8px 0px 0px;
+  margin: 0px 6px 0px 0px;
   padding: 0px;
 }
 
